# easypyfai

./: .gitignore  README.md  pyinstaller-cmd.bat  pyproject.toml
src/easypyfai/: easypyfai-cli.py  easypyfai.py
